Implement true EChange replay via ChangeDtoDeserializer
Replace the structural diff workaround (position-based list comparison +
ChangeRecordingView) with true EChange deserialization and replay:

1. Deserialize changelog DTOs into live EChange<HierarchicalId> objects
   via ChangeDtoDeserializer
2. Replay through the standard Vitruv pipeline:
   resolveAndApply → assignIds → propagateChange

Key fixes:
- ChangeDtoDeserializer: split hid() into hid() (resource-based path for
  affectedElement) and hidOrCache() (cache ID for newValue/oldValue of
  reference changes where element is still in staging area)
- SemanticMergeEngine.replayChanges(): use a COPY ResourceSet for
  resolution (same pattern as IdentityMappingViewType.commitViewChanges)
  to avoid double-application of changes

Removed dead code:
- ConflictDetector.java (superseded by UuidConflictDetector)
- ChangeExtractor.java (unused by engine)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>