@@ -1,7 +1,5 @@
 package tools.vitruv.framework.vsum.branch.merge;
 
-import static edu.kit.ipd.sdq.commons.util.org.eclipse.emf.ecore.resource.ResourceSetUtil.withGlobalFactories;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -14,7 +12,8 @@ import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.eclipse.emf.common.util.URI;
+import static edu.kit.ipd.sdq.commons.util.org.eclipse.emf.ecore.resource.ResourceSetUtil.withGlobalFactories;
+
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.emf.ecore.resource.ResourceSet;
@@ -22,34 +21,36 @@ import org.eclipse.emf.ecore.resource.impl.ResourceSetImpl;
 import org.eclipse.emf.ecore.util.EcoreUtil;
 import org.eclipse.jgit.api.errors.GitAPIException;
 
+import tools.vitruv.change.atomic.uuid.UuidResolver;
+
 import tools.vitruv.change.atomic.EChange;
 import tools.vitruv.change.atomic.hid.HierarchicalId;
+import tools.vitruv.change.atomic.uuid.Uuid;
+import tools.vitruv.change.composite.description.VitruviusChange;
+import tools.vitruv.change.composite.description.VitruviusChangeFactory;
+import tools.vitruv.change.composite.description.VitruviusChangeResolver;
+import tools.vitruv.change.composite.description.VitruviusChangeResolverFactory;
 import tools.vitruv.change.interaction.InteractionResultProvider;
 import tools.vitruv.change.propagation.ChangePropagationSpecification;
-import tools.vitruv.framework.views.ViewTypeFactory;
 import tools.vitruv.framework.vsum.internal.InternalVirtualModel;
 
 /**
  * Core semantic three-way merge engine.
  *
- * <p>Uses two mechanisms:
- * <ul>
- *   <li><strong>Changelog DTOs + UUIDs</strong> for conflict detection — compares changes
- *       by stable element identity (UUID) to find true semantic conflicts</li>
- *   <li><strong>ChangeRecordingView</strong> for replay — applies the source branch's model
- *       state onto a view of the target VSUM, with fine-grained change recording so that
- *       {@code propagateChange()} fires reactions correctly</li>
- * </ul>
- *
- * <p>Algorithm:
+ * <p>Replays serialized EChange transactions from the source branch onto the target
+ * branch's VSUM. The pipeline is:
  * <ol>
  *   <li>Extract base/ours/theirs states via JGit TreeWalk</li>
- *   <li>Load changelog DTOs and detect UUID-based conflicts</li>
- *   <li>Load target VSUM from ours state</li>
- *   <li>Create a ChangeRecordingView on the target VSUM</li>
- *   <li>Apply theirs' model state changes to the view (additions, modifications, deletions)</li>
- *   <li>{@code view.commitChanges()} records individual EMF changes and propagates them</li>
+ *   <li>Load changelog DTOs from extracted temp dirs</li>
+ *   <li>UUID-based conflict detection on DTOs</li>
+ *   <li>Filter DTOs by conflict resolutions (ours/theirs choice)</li>
+ *   <li>Deserialize filtered DTOs into live {@code EChange<HierarchicalId>} objects</li>
+ *   <li>Replay: {@code resolveAndApply → assignIds → propagateChange}</li>
  * </ol>
+ *
+ * <p>The replay step follows the same pipeline as
+ * {@code IdentityMappingViewType.commitViewChanges()} (lines 96-109).
+ * Reactions fire automatically during {@code propagateChange()}.
  */
 public class SemanticMergeEngine {
 
@@ -93,21 +94,19 @@ public class SemanticMergeEngine {
         loader.checkoutStateAtCommit(theirsSha, theirsDir);
         loader.checkoutStateAtCommit(oursSha, oursDir);
 
-        // 2. Load changelog DTOs for conflict detection
+        // 2. Load changelog DTOs
         List<SemanticChangeLog.ChangeDto> oursDtos = loadAllDtosFromDir(oursDir);
         List<SemanticChangeLog.ChangeDto> theirsDtos = loadAllDtosFromDir(theirsDir);
         LOGGER.info("Loaded {} ours DTOs, {} theirs DTOs", oursDtos.size(), theirsDtos.size());
 
         if (theirsDtos.isEmpty()) {
-            LOGGER.info("No theirs changelog DTOs — checking for model differences");
-            // Fall through to view-based merge if there are model file differences
-            // but no changelogs (e.g., changelogs weren't captured for this branch)
+            LOGGER.info("No theirs changelog DTOs — nothing to replay");
+            return SemanticMergeResult.success(List.of(), oursDir);
         }
 
         // 3. UUID-based conflict detection
         List<MergeConflict> conflicts = List.of();
         List<ConflictResolution> resolutions = List.of();
-        Set<String> skipTheirsUuids = Set.of();
 
         if (!oursDtos.isEmpty() || !theirsDtos.isEmpty()) {
             UuidConflictDetector detector = new UuidConflictDetector();
@@ -119,38 +118,32 @@ public class SemanticMergeEngine {
                     return SemanticMergeResult.conflict(conflicts);
                 }
                 resolutions = conflictResolutionProvider.resolve(conflicts);
-                // Collect UUIDs where user chose OURS (= skip theirs' changes for those elements)
-                skipTheirsUuids = resolutions.stream()
-                        .filter(r -> r.choice() == ConflictResolution.Choice.OURS)
-                        .map(ConflictResolution::elementUuid)
-                        .collect(Collectors.toSet());
-                LOGGER.info("Resolved {} conflicts ({} keep ours, {} accept theirs)",
-                        conflicts.size(), skipTheirsUuids.size(),
-                        conflicts.size() - skipTheirsUuids.size());
+                theirsDtos = filterByResolutions(theirsDtos, conflicts, resolutions);
+                LOGGER.info("After conflict resolution: {} DTOs to replay", theirsDtos.size());
             }
         }
 
-        // 4. Check if there's anything to merge
-        List<String> primaryModelFiles = findPrimaryModelFiles(baseDir);
-        if (theirsDtos.isEmpty() && primaryModelFiles.isEmpty()) {
-            LOGGER.info("No source changes to merge — nothing to do");
-            return SemanticMergeResult.success(List.of(), oursDir);
+        // 4. Deserialize DTOs into live EChange<HierarchicalId> objects
+        String theirsUriPrefix = theirsDir.toAbsolutePath().toString();
+        String oursUriPrefix = oursDir.toAbsolutePath().toString();
+        ChangeDtoDeserializer deserializer = new ChangeDtoDeserializer(theirsUriPrefix, oursUriPrefix);
+        List<EChange<HierarchicalId>> theirsChanges = deserializer.deserializeAll(theirsDtos);
+
+        LOGGER.info("Deserialized {} EChanges for replay", theirsChanges.size());
+
+        if (theirsChanges.isEmpty()) {
+            return !resolutions.isEmpty()
+                    ? SemanticMergeResult.successWithResolutions(resolutions, List.of(), oursDir)
+                    : SemanticMergeResult.success(List.of(), oursDir);
         }
 
-        // 5. Load target VSUM and apply theirs' changes via ChangeRecordingView
+        // 5. Load target VSUM from ours state
         InternalVirtualModel targetVsum = GitStateLoader.loadVsumFromDir(oursDir, specs, interactionProvider);
 
+        // 6. Replay: resolveAndApply → assignIds → propagateChange
         try {
-            applyTheirsChanges(targetVsum, baseDir, theirsDir, primaryModelFiles,
-                    skipTheirsUuids, theirsDtos);
-        } catch (IllegalArgumentException e) {
-            if (e.getMessage() != null && e.getMessage().contains("no concrete change")) {
-                LOGGER.info("No concrete changes to replay — models are identical");
-            } else {
-                LOGGER.error("Replay failed: {}", e.getMessage(), e);
-                targetVsum.dispose();
-                throw new IOException("Semantic merge replay failed", e);
-            }
+            replayChanges(targetVsum, theirsChanges);
+            LOGGER.info("Successfully replayed {} changes onto target VSUM", theirsChanges.size());
         } catch (Exception e) {
             LOGGER.error("Replay failed: {}", e.getMessage(), e);
             targetVsum.dispose();
@@ -159,175 +152,89 @@ public class SemanticMergeEngine {
 
         targetVsum.dispose();
 
-        if (!resolutions.isEmpty()) {
-            return SemanticMergeResult.successWithResolutions(resolutions, List.of(), oursDir);
-        }
-        return SemanticMergeResult.success(List.of(), oursDir);
+        return !resolutions.isEmpty()
+                ? SemanticMergeResult.successWithResolutions(resolutions, theirsChanges, oursDir)
+                : SemanticMergeResult.success(theirsChanges, oursDir);
     }
 
     /**
-     * Applies theirs' changes to the target VSUM via a ChangeRecordingView.
+     * Replays EChange<HierarchicalId> objects onto a target VSUM.
      *
-     * <p>For each primary model file, compares base vs theirs to determine what changed:
-     * <ul>
-     *   <li><strong>New containment children</strong>: deep-copied from theirs into the view</li>
-     *   <li><strong>Attribute modifications</strong>: applied from theirs to matching view elements</li>
-     *   <li><strong>Deletions</strong>: elements in base but not in theirs are removed from view</li>
-     * </ul>
+     * <p>Follows the same pattern as {@code IdentityMappingViewType.commitViewChanges()}:
+     * <ol>
+     *   <li>Create a COPY of the VSUM's model resources into a fresh ResourceSet</li>
+     *   <li>Copy UUID mappings from the VSUM's resolver to the copy's resolver</li>
+     *   <li>{@code resolveAndApply} changes on the COPY (not the VSUM directly)</li>
+     *   <li>{@code assignIds} on the copy to convert EObject→Uuid</li>
+     *   <li>{@code propagateChange} on the VSUM (applies changes to real models + fires reactions)</li>
+     * </ol>
      *
-     * <p>Uses a ChangeRecordingView so individual EMF changes are captured and propagated
-     * via {@code propagateChange()}, firing reactions correctly.
-     *
-     * @param skipUuids UUIDs of elements where user chose OURS (skip theirs' changes)
-     * @param theirsDtos DTOs for UUID-based element matching
+     * <p>This separation ensures that changes are not double-applied: resolveAndApply
+     * modifies the copy, and propagateChange modifies the VSUM.
      */
-    @SuppressWarnings("unchecked")
-    private void applyTheirsChanges(InternalVirtualModel targetVsum,
-                                     Path baseDir, Path theirsDir,
-                                     List<String> primaryModelFiles,
-                                     Set<String> skipUuids,
-                                     List<SemanticChangeLog.ChangeDto> theirsDtos) {
+    private void replayChanges(InternalVirtualModel targetVsum,
+                                List<EChange<HierarchicalId>> changes) {
 
-        // Create a ChangeRecordingView on the target VSUM
-        var selector = targetVsum.createSelector(
-                ViewTypeFactory.createIdentityMappingViewType("merge-replay"));
-        targetVsum.getViewSourceModels().stream()
-                .flatMap(r -> r.getContents().stream())
-                .filter(obj -> {
-                    String uri = obj.eResource().getURI().toString();
-                    return primaryModelFiles.stream().anyMatch(uri::endsWith);
+        // Create a copy ResourceSet with copies of the VSUM's model resources
+        ResourceSet copyResourceSet = withGlobalFactories(new ResourceSetImpl());
+        UuidResolver copyUuidResolver = UuidResolver.create(copyResourceSet);
+
+        // Copy each model resource and map UUIDs
+        java.util.Map<Resource, Resource> resourceMapping = new java.util.HashMap<>();
+        for (Resource sourceResource : targetVsum.getViewSourceModels()) {
+            Resource copyResource = copyResourceSet.createResource(sourceResource.getURI());
+            copyResource.getContents().addAll(EcoreUtil.copyAll(sourceResource.getContents()));
+            resourceMapping.put(sourceResource, copyResource);
+        }
+        targetVsum.getUuidResolver().resolveResources(resourceMapping, copyUuidResolver);
+
+        // Create resolvers for the COPY ResourceSet
+        VitruviusChangeResolver<HierarchicalId> idResolver =
+                VitruviusChangeResolverFactory.forHierarchicalIds(copyResourceSet);
+        VitruviusChangeResolver<Uuid> uuidResolver =
+                VitruviusChangeResolverFactory.forUuids(copyUuidResolver);
+
+        VitruviusChange<HierarchicalId> change =
+                VitruviusChangeFactory.getInstance().createTransactionalChange(changes);
+
+        // Resolve and apply on the COPY (not the VSUM)
+        VitruviusChange<EObject> resolved = idResolver.resolveAndApply(change);
+        // Assign UUIDs on the COPY
+        VitruviusChange<Uuid> uuidChange = uuidResolver.assignIds(resolved);
+        // Propagate on the VSUM (applies to real models + fires reactions)
+        targetVsum.propagateChange(uuidChange);
+    }
+
+    /**
+     * Filters theirs' DTOs based on conflict resolutions.
+     * For OURS choice: remove the conflicting theirs DTO.
+     * For THEIRS choice: keep it (will be replayed).
+     */
+    private List<SemanticChangeLog.ChangeDto> filterByResolutions(
+            List<SemanticChangeLog.ChangeDto> theirsDtos,
+            List<MergeConflict> conflicts,
+            List<ConflictResolution> resolutions) {
+
+        Set<String> skipUuids = resolutions.stream()
+                .filter(r -> r.choice() == ConflictResolution.Choice.OURS)
+                .map(ConflictResolution::elementUuid)
+                .collect(Collectors.toSet());
+
+        Map<String, String> conflictFeatures = conflicts.stream()
+                .filter(c -> c.getConflictingFeature() != null)
+                .collect(Collectors.toMap(
+                        c -> c.getElementUuid() + "#" + c.getConflictingFeature(),
+                        c -> c.getConflictingFeature(),
+                        (a, b) -> a));
+
+        return theirsDtos.stream()
+                .filter(dto -> {
+                    if (dto.affectedElementUuid == null) return true;
+                    String key = dto.affectedElementUuid + "#" + dto.featureName;
+                    return !(conflictFeatures.containsKey(key)
+                            && skipUuids.contains(dto.affectedElementUuid));
                 })
-                .forEach(root -> selector.setSelected(root, true));
-        // Use ChangeRecordingView for fine-grained change tracking
-        var view = selector.createView().withChangeRecordingTrait();
-
-        // Load base and theirs models for comparison
-        ResourceSet baseRs = withGlobalFactories(new ResourceSetImpl());
-        ResourceSet theirsRs = withGlobalFactories(new ResourceSetImpl());
-
-        for (String modelFile : primaryModelFiles) {
-            Path basePath = baseDir.resolve(modelFile);
-            Path theirsPath = theirsDir.resolve(modelFile);
-            if (!Files.exists(theirsPath)) continue;
-
-            Resource theirsResource = theirsRs.getResource(
-                    URI.createFileURI(theirsPath.toAbsolutePath().toString()), true);
-            Resource baseResource = Files.exists(basePath)
-                    ? baseRs.getResource(URI.createFileURI(basePath.toAbsolutePath().toString()), true)
-                    : null;
-
-            EObject theirsRoot = theirsResource.getContents().isEmpty() ? null
-                    : theirsResource.getContents().get(0);
-            EObject baseRoot = (baseResource != null && !baseResource.getContents().isEmpty())
-                    ? baseResource.getContents().get(0) : null;
-            if (theirsRoot == null) continue;
-
-            // Find matching view root
-            for (var viewRoot : view.getRootObjects(EObject.class)) {
-                if (!viewRoot.eResource().getURI().toString().endsWith(modelFile)) continue;
-
-                // Apply theirs' changes to the view root by comparing base vs theirs
-                applyDiff(viewRoot, baseRoot, theirsRoot, skipUuids, theirsDtos);
-                break;
-            }
-        }
-
-        // Commit: ChangeRecordingView captures individual EMF operations → propagateChange
-        view.commitChanges();
-        LOGGER.info("Applied theirs' changes via ChangeRecordingView");
-    }
-
-    /**
-     * Applies the diff between base and theirs onto the view root.
-     * Walks containment references and applies additions, modifications, and deletions.
-     */
-    @SuppressWarnings("unchecked")
-    private void applyDiff(EObject viewRoot, EObject baseRoot, EObject theirsRoot,
-                           Set<String> skipUuids, List<SemanticChangeLog.ChangeDto> theirsDtos) {
-        if (theirsRoot == null) return;
-
-        // Apply attribute changes from theirs (where theirs differs from base)
-        for (var attr : theirsRoot.eClass().getEAllAttributes()) {
-            Object theirsVal = theirsRoot.eGet(attr);
-            Object baseVal = baseRoot != null ? baseRoot.eGet(attr) : null;
-            Object viewVal = viewRoot.eGet(attr);
-
-            // If theirs changed this attribute from base, and it's not a skip UUID
-            if (!java.util.Objects.equals(baseVal, theirsVal)) {
-                // Check if this change should be skipped (user chose OURS)
-                if (!shouldSkip(viewRoot, attr.getName(), skipUuids, theirsDtos)) {
-                    viewRoot.eSet(attr, theirsVal);
-                }
-            }
-        }
-
-        // Apply containment reference changes
-        for (var ref : theirsRoot.eClass().getEAllContainments()) {
-            if (!ref.isMany()) continue;
-
-            var theirsList = (List<EObject>) theirsRoot.eGet(ref);
-            var baseList = baseRoot != null ? (List<EObject>) baseRoot.eGet(ref) : List.<EObject>of();
-            var viewList = (List<EObject>) viewRoot.eGet(ref);
-
-            // Elements in theirs beyond what base had → new additions
-            if (theirsList.size() > baseList.size()) {
-                for (int i = baseList.size(); i < theirsList.size(); i++) {
-                    EObject newElement = EcoreUtil.copy(theirsList.get(i));
-                    viewList.add(newElement);
-                    LOGGER.debug("Added element from theirs: {}", newElement);
-                }
-            }
-
-            // Recurse into existing children for attribute modifications
-            int commonSize = Math.min(Math.min(baseList.size(), theirsList.size()), viewList.size());
-            for (int i = 0; i < commonSize; i++) {
-                applyDiff(viewList.get(i), baseList.get(i), theirsList.get(i), skipUuids, theirsDtos);
-            }
-
-            // Elements in base but not in theirs → deletions by theirs
-            if (theirsList.size() < baseList.size()) {
-                for (int i = baseList.size() - 1; i >= theirsList.size(); i--) {
-                    if (i < viewList.size()) {
-                        viewList.remove(i);
-                        LOGGER.debug("Removed element (deleted by theirs) at index {}", i);
-                    }
-                }
-            }
-        }
-    }
-
-    /**
-     * Checks if a change to the given element should be skipped (user chose OURS).
-     */
-    private boolean shouldSkip(EObject element, String featureName,
-                                Set<String> skipUuids,
-                                List<SemanticChangeLog.ChangeDto> theirsDtos) {
-        if (skipUuids.isEmpty()) return false;
-        // Find the UUID for this element in theirs' DTOs
-        for (var dto : theirsDtos) {
-            if (dto.featureName != null && dto.featureName.equals(featureName)
-                    && dto.affectedElementUuid != null
-                    && skipUuids.contains(dto.affectedElementUuid)) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    /**
-     * Finds primary model files (excluding derived models like .model2).
-     */
-    private List<String> findPrimaryModelFiles(Path dir) throws IOException {
-        try (var stream = Files.walk(dir)) {
-            return stream
-                    .filter(Files::isRegularFile)
-                    .map(dir::relativize)
-                    .map(Path::toString)
-                    .filter(f -> f.endsWith(".model") || f.endsWith(".xmi") || f.endsWith(".ecore"))
-                    .filter(f -> !f.endsWith(".model2"))
-                    .filter(f -> !f.contains("vsum/") && !f.contains(".vitruvius/") && !f.contains(".git/"))
-                    .collect(Collectors.toList());
-        }
+                .toList();
     }
 
     /**
